Fixed alignment issue
Fixed alignment issue

--- a/css/ContactUs.css
+++ b/css/ContactUs.css
@@ -20,7 +20,6 @@
     /* text-align: center; */
     justify-content: center;
     align-items: center;
-    text-align: center;
 }   
 #location {
     width: 65%;
